# shared-buffer

./: CMakeLists.txt  README.md  annotated.html  classchops_1_1const__shared__buffer-members.html  classchops_1_1const__shared__buffer.html  classchops_1_1mutable__shared__buffer-members.html  classchops_1_1mutable__shared__buffer.html  classes.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_75413f1addb0e009b1abec2cf8fcb13d.html  dir_75413f1addb0e009b1abec2cf8fcb13d_dep.map  dir_75413f1addb0e009b1abec2cf8fcb13d_dep.md5  dir_cfafba98a580ce4b62f8a6fa96d7cbb0.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_rela.html  graph_legend.html  index.html  menudata.js  shared__buffer_8hpp_source.html  shared__buffer__example_8cpp.html  shared__buffer__example_8cpp__incl.map  shared__buffer__example_8cpp__incl.md5  shared__buffer__test_8cpp.html  shared__buffer__test_8cpp__incl.map  shared__buffer__test_8cpp__incl.md5
.github/workflows/: build_run_unit_test_cmake.yml
doc/: Doxyfile
example/: CMakeLists.txt  shared_buffer_example.cpp
include/buffer/: shared_buffer.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  pages_0.js  pages_2.js  pages_3.js  pages_4.js  related_0.js  searchdata.js
test/: CMakeLists.txt  shared_buffer_test.cpp
